--- a/00.md
+++ b/00.md
@@ -12,6 +12,15 @@
 1. `boolean`
   - Examples: `true`, `false`
 
-1. `undefined`
-  - Default value of a variable if nothing is assigned to it.
+## Getting Data Type
 
+Use `typeof` operator to check data type of a variable or an expression. It will return a string indicating the type of the operand.
+
+Syntax: `typeof <operand>`
+
+Examples:
+```js
+typeof 1000;                  // number
+typeof "Hello";               // string
+typeof true;                  // boolean
+```
