--- a/00.md
+++ b/00.md
@@ -24,3 +24,23 @@ typeof 1000;                  // number
 typeof "Hello";               // string
 typeof true;                  // boolean
 ```
+
+## `undefined`
+
+- a variable that has no value assigned is of type `undefined`.
+- a function returns `undefined` if no value is returned.
+- an undeclared variable is of type `undefined`.
+
+Examples:
+```js
+typeof undefined;             // undefined
+typeof undeclaredVariable;    // undefined
+
+var x;
+typeof x;                     // undefined
+
+function foo(){
+  // return nothing
+}
+typeof foo();                 // undefined
+```
