--- a/00.md
+++ b/00.md
@@ -25,6 +25,17 @@ typeof "Hello";               // string
 typeof true;                  // boolean
 ```
 
+## Booleans
+
+Falsy values:
+- `false`
+- `null`
+- `undefined`
+- `""` (empty string)
+- `0`
+
+Everything else is truthy.
+
 ## `undefined`
 
 - a variable that has no value assigned is of type `undefined`.
@@ -44,3 +55,4 @@ function foo(){
 }
 typeof foo();                 // undefined
 ```
+
