--- a/00.md
+++ b/00.md
@@ -36,7 +36,7 @@ Falsy values:
 
 Everything else is truthy.
 
-## `undefined`
+## undefined
 
 - a variable that has no value assigned is of type `undefined`.
 - a function returns `undefined` if no value is returned.
