--- a/00.md
+++ b/00.md
@@ -56,3 +56,6 @@ function foo(){
 typeof foo();                 // undefined
 ```
 
+## null
+
+`null` is an object representing null or an "emtpy" value.
